--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -82,7 +82,7 @@ html
 
     div#funding
       div.propaganda
-        h2 Funding
+        h2 Funding (spoiler: zero) and fundraising
         block funding
 
     div.footer facebook.tracking.exposed is part of the tracking.exposed project, is the continuation of 
