it is time to delivah

--- a/sections/generic.jade
+++ b/sections/generic.jade
@@ -32,10 +32,9 @@ block useit
   
   p Done! You will see the logo of Facebook change replaced by this symbol ઉ  clicking in there will lead you to your timeline graph
 
-  p Done! for more technical clarification tap 
-    a(href="#" onclick="showtech();return false;") here
-
-  p.techdetails Now, when you open the Facebook page (only in the browser in which you have installed the above tools, not in the mobile app), you will send non-sensitive metadata to the project servers. 
+  p.small
+    b Details:
+    | Now, when you open the Facebook page (only in the browser in which you have installed the above tools, not in the mobile app), you will send non-sensitive metadata to the project servers. 
 
   h3
     p.center Now what?
