suggestion concept implemented

--- a/sections/generic.jade
+++ b/sections/generic.jade
@@ -48,9 +48,7 @@ block useit
       a(href="/visibility" target="_blank") visibility 
       | page.
     span.col-md-1
-    span.container-fluid.col-md-3.niceborder Researcher can study the impact of algorithm manipulation in groups. I don't know yet how let resarcher access to all the data collected, if you've some idea
-      a.sug(href="#" id="research" onclick="suggestion('research');return false;") press the [Share with me] 
-      | link.
+    span.container-fluid.col-md-3.niceborder Researcher can study the impact of algorithm manipulation in groups.
       | A neat way to do research, is having a group of controller user. Studends, bot, or just a bunch of people tring to minimize their differencies in the next weeks. following the same persons, liking the same thing. This will uniform the differencies and permit easily to understand the content discriminaton. read more to the Research Groups, or provide 
       a.sug(href="#" id="groups" onclick="suggestion('groups');return false;") [Suggestion, ideas, projects]
     |.
@@ -74,7 +72,7 @@ block vision
   p It is clear that institutions are not fast enough to catch up with corporate activities in the ditigal age, but somehow, someone, has to keep social values alive despite the technocracy arising. This project is completelty transnational, as the influence of facebook is, is open to collaboration and can be forked. I don't want repliace the centralized structure of power in a prokect intended to monitor such influence, so following update will permit interoperability across the node. Many advancement are planned but they can contain some theoretical problem to be discusses, namely: facebook ToS, users data, researcher agenda, data integrity. [Get in touch for cooperation]
 block about
 
-  p My real name is 
+  p I'm 
     a(href="https://twitter.com/_vecna") Claudio Agosti
     |, I'm an European citizen; Started in the '99 dwelling into the hacking scene, I get passionate on information hiding, then in the broad meanigs of privacy, then in anonymous whistlebowing and advocacy.
     
